# address-cleaner-kr

./: .coverage  .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
address_cleaner/: __init__.py  cli.py  clients.py  excel.py  history.py  juso_search.py  normalizer.py  regions.py  typo.py
address_cleaner/registry/: __init__.py  cli.py  excel.py  juso.py  normalize.py
docs/: hug-integration.md
examples/: sample_addresses.csv
legacy/: 도로명주소적용표준화주소v3.sanitized.py
tests/: test_cache_expiry.py  test_cli.py  test_clients.py  test_excel.py  test_failure_feedback_rules.py  test_history.py  test_juso_search.py  test_normalizer.py  test_public_api.py  test_registry_refiner.py  test_typo.py
tests/fixtures/: anonymized_addresses.json
