[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "address-cleaner-kr"
version = "0.3.0"
description = "Korean address normalization and API-searchable query generation for juso.go.kr and Korea Post."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
address-cleaner = "address_cleaner.cli:main"
registry-address-refine = "address_cleaner.registry.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["address_cleaner"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# legacy/는 참고용으로 보존하는 원본 스크립트라 린트 대상에서 제외한다.
extend-exclude = ["legacy"]
