[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "address-cleaner-kr"
version = "0.3.0"
description = "Korean address normalization and API-searchable query generation for juso.go.kr and Korea Post."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-requests",
]

[project.scripts]
address-cleaner = "address_cleaner.cli:main"
registry-address-refine = "address_cleaner.registry.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["address_cleaner"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# legacy/는 참고용으로 보존하는 원본 스크립트라 린트 대상에서 제외한다.
extend-exclude = ["legacy"]

[tool.mypy]
# legacy/는 packages 지정으로 자연히 제외된다.
packages = ["address_cleaner"]
python_version = "3.10"
warn_unused_ignores = true

[[tool.mypy.overrides]]
# openpyxl은 공식 타입 스텁이 없다.
module = "openpyxl.*"
ignore_missing_imports = true
